# STR_ESP32_HWM_RTP_SNTP

./: .gitignore  sdkconfig  sdkconfig.old
c_example/: esp32_sntp_con.c  tcp_udp_esp32_wifi_con.c
main/: CMakeLists.txt  hello_world_main.c
py/: tcp_client.py  udp_server.py
